修改 启动页

--- a/pages/login/startUp/startUp.wxml
+++ b/pages/login/startUp/startUp.wxml
@@ -1,4 +1,5 @@
 <!--pages/login/startUp/startUp.wxml-->
 <view class="_start">
   <image src='../../../img/startUp.png'></image>
+  <button class="orange_color" bindtap="toEntert"> 立即进入</button>
 </view>
