--- a/pages/login/startUp/startUp.wxss
+++ b/pages/login/startUp/startUp.wxss
@@ -15,3 +15,15 @@
   height: 80%;
   margin-top: 5%;
 }
+
+.orange_color {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #ff6319;
+  color: #fff;
+  border-radius: 0 !important;
+}
+
+
