修改 启动页图片为动态

--- a/pages/login/startUp/startUp.wxml
+++ b/pages/login/startUp/startUp.wxml
@@ -1,5 +1,5 @@
 <!--pages/login/startUp/startUp.wxml-->
 <view class="_start">
-  <image src='../../../img/startUp.png'></image>
+  <image src='{{imgUrl}}'></image>
   <button class="orange_color" disabled="{{isClick}}" bindtap="toEntert"> 立即进入</button>
 </view>
