--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -18,8 +18,11 @@
 
 .userinfoImg .userinfo-nickname {
   float: left;
+  margin-top: 90rpx;
+}
+.userinfoImg .userinfo-nickname .smallFont {
+ font-size: 26rpx;
   margin-top: 10rpx;
-  line-height: 240rpx;
 }
 
 .userinfoImg .userinfo-nickname:nth-of-type(1) {
